--- a/index.html
+++ b/index.html
@@ -15,6 +15,78 @@
 
 </head>
 <body>
+	<!-- navigation -->
+	<section style="padding-top:0;">
+		<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+		    <!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		      <a class="navbar-brand" href="#">HA</a>
+		    </div>
+
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      <ul class="nav navbar-nav">
+		        <li class="active"><a href="#">About<span class="sr-only">(current)</span></a></li>
+		        <li><a href="#">Projects</a></li>
+		        
+		      </ul>	    
+		    </div><!-- /.navbar-collapse -->
+		  </div><!-- /.container-fluid -->
+		</nav>
+	</section>
+	
+	<!-- intro -->
+	<section class="container">
+		
+		<div style="" class="text-center">
+			<h3>Welcome to My Site</h3>
+		</div>
+		
+		<div class="text-center">
+			
+			<img class="intro-image" src="assets/img/my-picture.jpg">
+
+		</div>
+		<div class="text-center intro-description">
+			<p>
+				Lorem ipsum dolor sit amet, dolor nec eu sed, amet sed tincidunt dui dapibus luctus, luctus faucibus in aenean mauris. A eget, tempora scelerisque. Arcu id urna est tristique elit, suspendisse lacus senectus
+			</p>
+		</div>
+	</section>
+	
+	<!-- about me -->
+	<section class="container">
+		<div class="text-center">
+			<h3>About Me</h3>
+		</div>
+
+		<div class="row">
+			<div class="col-md-6 text-center">
+				<p>
+					tique. Ut eleifend eros nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper. Vestibulum viverra velit. Curabitur erat
+				</p>
+			</div>
+
+			<div class="col-md-6 text-center">
+				<p>
+					tique. Ut eleifend eros nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper. Vestibulum viverra velit. Curabitur erat
+				</p>
+
+			</div>
+		</div>
+
+
+	</section>
+
+	
+
 	Initial Commit
 
 	<!-- scripts reference -->
