add contact and social skeleton

--- a/index.html
+++ b/index.html
@@ -84,10 +84,48 @@
 
 
 	</section>
-
 	
+	<!-- projects -->
+	<section>
+		<div class="text-center">
+			<h3>Projects</h3>
+		</div>
+		<div>
+			<div class="col-md-6">
+				
+			</div>
+		</div>
+	</section>
 
-	Initial Commit
+	<!-- Socialize -->
+	<section class="container">
+		<div class="text-center">
+			<h3>Let's Socialize</h3>
+		</div>
+		<div class="row social-container">
+			<div class="col-xs-4 text-right">
+				<img class="" src="assets/img/linkedin.png">
+			</div>
+			<div class="col-xs-4 text-center">
+				<img class=""  src="assets/img/instagram.png">
+			</div>
+			<div class="col-xs-4 text-left">
+				<img class="" src="assets/img/facebook.png">
+			</div>
+		</div>
+	</section>	
+	
+	<!-- contact -->
+	<section class="container text-center">
+		<div>
+			<h3>Contact</h3>
+		</div>
+		<div>
+			Please do not hesitate to email me at this email account<br>
+			<a href="mailto:hassanali.mail.mcgill.com">hassan.ali@mail.mcgill.com</a>
+		</div>
+	</section>
+
 
 	<!-- scripts reference -->
 	<script src="controller.js"></script>		
