add navbar jquery active class transition

--- a/index.html
+++ b/index.html
@@ -86,14 +86,41 @@
 	</section>
 	
 	<!-- projects -->
-	<section>
+	<section class="container" style="">
 		<div class="text-center">
 			<h3>Projects</h3>
 		</div>
 		<div>
-			<div class="col-md-6">
-				
+			<div class="col-md-6 text-center">
+				<div style="border: 2px solid black;padding:1em;">
+					<div><img style="height:100px;" src="assets/img/box.png"></div>
+					<div>
+						<div>
+							<p>
+								Massa ipsum purus, diam pede aliquam eu ac volutpat rhoncus, ac praesent ipsum mollis turpis nec sollicitudin
+							</p>
+						</div>
+						<div><button class="btn btn-primary">More...</button></div>
+					</div>
+				</div>
 			</div>
+			
+		</div>
+		<div>
+			<div class="col-md-6 text-center">
+				<div style="border: 2px solid black;padding:1em;">
+					<div><img style="height:100px;" src="assets/img/box.png"></div>
+					<div>
+						<div>
+							<p>
+								Massa ipsum purus, diam pede aliquam eu ac volutpat rhoncus, ac praesent ipsum mollis turpis nec sollicitudin
+							</p>
+						</div>
+						<div><button class="btn btn-primary">More...</button></div>
+					</div>
+				</div>
+			</div>
+			
 		</div>
 	</section>
 
