add href of nav

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li class="active"><a href="#">About<span class="sr-only">(current)</span></a></li>
-		        <li><a href="#">Projects</a></li>
+		        <li class="active"><a href="#about">About<span class="sr-only">(current)</span></a></li>
+		        <li><a href="#projects">Projects</a></li>
+		        <li><a href="#social">Social</a></li>
+		        <li><a href="#contact">Contact</a></li>
 		        
 		      </ul>	    
 		    </div><!-- /.navbar-collapse -->
@@ -62,7 +64,7 @@
 	</section>
 	
 	<!-- about me -->
-	<section class="container">
+	<section id="about" class="container">
 		<div class="text-center">
 			<h3>About Me</h3>
 		</div>
@@ -86,7 +88,7 @@
 	</section>
 	
 	<!-- projects -->
-	<section class="container" style="">
+	<section id="projects" class="container" style="">
 		<div class="text-center">
 			<h3>Projects</h3>
 		</div>
@@ -125,7 +127,7 @@
 	</section>
 
 	<!-- Socialize -->
-	<section class="container">
+	<section id="social" class="container">
 		<div class="text-center">
 			<h3>Let's Socialize</h3>
 		</div>
@@ -143,7 +145,7 @@
 	</section>	
 	
 	<!-- contact -->
-	<section class="container text-center">
+	<section id="contact" class="container text-center">
 		<div>
 			<h3>Contact</h3>
 		</div>
