fix project margin bottom

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		</div>
 		<div>
 			<div class="col-md-6 text-center">
-				<div style="border: 2px solid black;padding:1em;">
+				<div style="border: 2px solid black;padding:1em;margin-bottom:1em;">
 					<div><img style="height:100px;" src="assets/img/box.png"></div>
 					<div>
 						<div>
