add colors from the template page and change font size

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 	</section>
 	
 	<!-- intro -->
-	<section class="container">
-		
+	<section class="container color1 custom-shadow">
 		<div style="" class="text-center">
 			<h3>Welcome to My Site</h3>
 		</div>
@@ -64,7 +63,7 @@
 	</section>
 	
 	<!-- about me -->
-	<section id="about" class="container">
+	<section id="about" class="container color2 custom-shadow">
 		<div class="text-center">
 			<h3>About Me</h3>
 		</div>
@@ -88,7 +87,7 @@
 	</section>
 	
 	<!-- projects -->
-	<section id="projects" class="container" style="">
+	<section id="projects" class="container color3 custom-shadow" style="">
 		<div class="text-center">
 			<h3>Projects</h3>
 		</div>
@@ -127,7 +126,7 @@
 	</section>
 
 	<!-- Socialize -->
-	<section id="social" class="container">
+	<section id="social" class="container color4 custom-shadow">
 		<div class="text-center">
 			<h3>Let's Socialize</h3>
 		</div>
@@ -145,7 +144,7 @@
 	</section>	
 	
 	<!-- contact -->
-	<section id="contact" class="container text-center">
+	<section id="contact" class="container text-center color5 custom-shadow">
 		<div>
 			<h3>Contact</h3>
 		</div>
