remove jquery dependency; remove colors;

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ICC Web Development</title>
+	<title>Portfolio</title>
 	<!-- css files -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
 
 	<!-- external libraries-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+	
+	<meta name="author" content="Hassan Ali">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -45,14 +45,15 @@
 	</section>
 	
 	<!-- intro -->
-	<section class="container color1 custom-shadow">
+	<section class="container">
 		<div style="" class="text-center">
 			<h3>Welcome to My Site</h3>
 		</div>
 		
 		<div class="text-center">
 			
-			<img class="intro-image" src="assets/img/my-picture.jpg">
+			<!-- Source: https://flic.kr/p/pAZBNK -->
+			<img class="intro-image" src="assets/img/profile.jpg">
 
 		</div>
 		<div class="text-center intro-description">
@@ -63,7 +64,7 @@
 	</section>
 	
 	<!-- about me -->
-	<section id="about" class="container color2 custom-shadow">
+	<section id="about" class="container">
 		<div class="text-center">
 			<h3>About Me</h3>
 		</div>
@@ -87,7 +88,7 @@
 	</section>
 	
 	<!-- projects -->
-	<section id="projects" class="container color3 custom-shadow" style="">
+	<section id="projects" class="container" style="">
 		<div class="text-center">
 			<h3>Projects</h3>
 		</div>
@@ -101,7 +102,7 @@
 								Massa ipsum purus, diam pede aliquam eu ac volutpat rhoncus, ac praesent ipsum mollis turpis nec sollicitudin
 							</p>
 						</div>
-						<div><button class="btn btn-primary">More...</button></div>
+						<div><a href=""><button class="btn btn-primary">More...</button></a></div>
 					</div>
 				</div>
 			</div>
@@ -117,7 +118,7 @@
 								Massa ipsum purus, diam pede aliquam eu ac volutpat rhoncus, ac praesent ipsum mollis turpis nec sollicitudin
 							</p>
 						</div>
-						<div><button class="btn btn-primary">More...</button></div>
+						<div><a href=""><button class="btn btn-primary">More...</button></a></div>
 					</div>
 				</div>
 			</div>
@@ -126,25 +127,25 @@
 	</section>
 
 	<!-- Socialize -->
-	<section id="social" class="container color4 custom-shadow">
+	<section id="social" class="container">
 		<div class="text-center">
 			<h3>Let's Socialize</h3>
 		</div>
 		<div class="row social-container">
 			<div class="col-xs-4 text-right">
-				<img class="" src="assets/img/linkedin.png">
+				<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class="" src="assets/img/linkedin.png"></a>
 			</div>
 			<div class="col-xs-4 text-center">
-				<img class=""  src="assets/img/instagram.png">
+				<a target="_blank" href="https://www.instagram.com/helfiwalcott/"><img class=""  src="assets/img/instagram.png"></a>
 			</div>
 			<div class="col-xs-4 text-left">
-				<img class="" src="assets/img/facebook.png">
+				<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
 			</div>
 		</div>
 	</section>	
 	
 	<!-- contact -->
-	<section id="contact" class="container text-center color5 custom-shadow">
+	<section id="contact" class="container text-center">
 		<div>
 			<h3>Contact</h3>
 		</div>
