--- a/index.html
+++ b/index.html
@@ -3,162 +3,167 @@
 <head>
 	<title>Portfolio</title>
 	<!-- css files -->
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
-
 	<!-- external libraries-->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
 	
 	<meta name="author" content="Hassan Ali">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-	<!-- navigation -->
-	<section style="padding-top:0;">
-		<nav class="navbar navbar-default">
-		  <div class="container-fluid">
-		    <!-- Brand and toggle get grouped for better mobile display -->
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </button>
-		      <a class="navbar-brand" href="#">HA</a>
-		    </div>
+	<body>
+		<!-- Navbar -->
+		<nav class="nav container">
+			<!-- This "nav-menu" is hidden on mobile -->
+			<!-- Add the modifier "is-active" to display it on mobile -->
+			<div class="nav-left nav-menu">
+				<span class="nav-item">
+					<a href="#about">About</a>
+				</span>
+				<span class="nav-item">
+					<a href="#projects">Projects</a>
+				</span>
+				<span class="nav-item">
+					<a href="#social">Social</a>
+				</span>
+				<span class="nav-item">
+					<a href="#contact">Contact</a>
+				</span>
+			</div>
 
-		    <!-- Collect the nav links, forms, and other content for toggling -->
-		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		      <ul class="nav navbar-nav">
-		        <li class="active"><a href="#about">About<span class="sr-only">(current)</span></a></li>
-		        <li><a href="#projects">Projects</a></li>
-		        <li><a href="#social">Social</a></li>
-		        <li><a href="#contact">Contact</a></li>
-		        
-		      </ul>	    
-		    </div><!-- /.navbar-collapse -->
-		  </div><!-- /.container-fluid -->
+			<div class="nav-center">
+				<a class="nav-item">
+					<span class="icon">
+						<i class="fa fa-medium"></i>
+					</span>
+				</a>
+				<a class="nav-item">
+					<span class="icon">
+						<i class="fa fa-github"></i>
+					</span>
+				</a>
+				<a class="nav-item">
+					<span class="icon">
+						<i class="fa fa-twitter"></i>
+					</span>
+				</a>				
+			</div>
+
+			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
+			<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
+			<span class="nav-toggle">
+				<span></span>
+				<span></span>
+				<span></span>
+			</span>
 		</nav>
-	</section>
-	
-	<!-- intro -->
-	<section class="container">
-		<div style="" class="text-center">
-			<h3>Welcome to My Site</h3>
-		</div>
+				
+		<!-- About Me -->
+		<section id="about" class="section-2">
+			<div class="container has-text-centered">
+				<!-- Source: https://flic.kr/p/pAZBNK -->
+				<img class="avatar" src="http://hassanali.me/images/my-picture.png">
+			</div>
+			<div class="container"></br>
+				<div class="columns">
+					<div class="column is-6 has-text-centered">
+						<p>
+							tique. Ut eleifend eros nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper. Vestibulum viverra velit. Curabitur erat os nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper
+						</p>
+					</div>
+
+					<div class="column is-6 has-text-centered">
+						<p>
+							tique. Ut eleifend eros nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper. Vestibulum viverra velit. Curabitur erat os nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 		
-		<div class="text-center">
-			
-			<!-- Source: https://flic.kr/p/pAZBNK -->
-			<img class="intro-image" src="assets/img/profile.jpg">
-
-		</div>
-		<div class="text-center intro-description">
-			<p>
-				Lorem ipsum dolor sit amet, dolor nec eu sed, amet sed tincidunt dui dapibus luctus, luctus faucibus in aenean mauris. A eget, tempora scelerisque. Arcu id urna est tristique elit, suspendisse lacus senectus
-			</p>
-		</div>
-	</section>
-	
-	<!-- about me -->
-	<section id="about" class="container">
-		<div class="text-center">
-			<h3>About Me</h3>
-		</div>
-
-		<div class="row">
-			<div class="col-md-6 text-center">
-				<p>
-					tique. Ut eleifend eros nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper. Vestibulum viverra velit. Curabitur erat os nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper
-				</p>
-			</div>
-
-			<div class="col-md-6 text-center">
-				<p>
-					tique. Ut eleifend eros nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper. Vestibulum viverra velit. Curabitur erat os nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper
-				</p>
-
-			</div>
-		</div>
-
-
-	</section>
-	
-	<!-- projects -->
-	<section id="projects" class="container" style="">
-		<div class="text-center">
-			<h3>Projects</h3>
-		</div>
-		<div>
-			<div class="col-md-6 text-center">
-				<div style="border: 2px solid black;padding:1em;margin-bottom:1em;">
-					<div><img style="height:100px;" src="assets/img/box.png"></div>
-					<div>
-						<div>
-							<p>
-								Massa ipsum purus, diam pede aliquam eu ac volutpat rhoncus, ac praesent ipsum mollis turpis nec sollicitudin
-							</p>
+		<!-- Projects -->
+		<section  class="section-3">
+			<div class="container">
+				<div class="has-text-centered">
+					<h3 class="title is-3">Projects</h3>
+				</div>
+				<!-- Project 1 -->
+				<div class="columns is-multiline is-desktop">
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div>
+									<figure class="image project-figure">
+										<img src="https://static.pexels.com/photos/28094/pexels-photo-28094.jpg" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<p>
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
+									</p>
+								</div>
+							</article>
 						</div>
-						<div><a href=""><button class="btn btn-primary">More...</button></a></div>
+					</div>
+					<!-- Project 2 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div>
+									<figure class="image project-figure">
+										<img src="https://static.pexels.com/photos/105254/pexels-photo-105254.jpeg" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<p>
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
+									</p>
+								</div>
+							</article>
+						</div>
 					</div>
 				</div>
 			</div>
-			
-		</div>
-		<div>
-			<div class="col-md-6 text-center">
-				<div style="border: 2px solid black;padding:1em;">
-					<div><img style="height:100px;" src="assets/img/box.png"></div>
-					<div>
-						<div>
-							<p>
-								Massa ipsum purus, diam pede aliquam eu ac volutpat rhoncus, ac praesent ipsum mollis turpis nec sollicitudin
-							</p>
-						</div>
-						<div><a href=""><button class="btn btn-primary">More...</button></a></div>
+		</section>
+
+		<!-- Social -->
+		<section id="social" class="section-4">
+			<div class="container">
+				<div class="has-text-centered">					
+					<h3 class="title is-3">Let's Socialize</h3>
+				</div>
+				<div class="social-container columns">
+					<div class="column is-4 has-text-right">
+						<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class="" src="assets/img/linkedin.png"></a>
+					</div>
+					<div class="column is-4 has-text-centered">
+						<a target="_blank" href="https://www.instagram.com/helfiwalcott/"><img class=""  src="assets/img/instagram.png"></a>
+					</div>
+					<div class="column is-4 has-text-left">
+						<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
 					</div>
 				</div>
 			</div>
-			
-		</div>
-	</section>
-
-	<!-- Socialize -->
-	<section id="social" class="container">
-		<div class="text-center">
-			<h3>Let's Socialize</h3>
-		</div>
-		<div class="row social-container">
-			<div class="col-xs-4 text-right">
-				<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class="" src="assets/img/linkedin.png"></a>
+		</section>	
+		
+		<!-- Contact -->
+		<section id="contact" class="section-5">
+			<div class="container has-text-centered">
+				<div>
+					<h3 class="title is-3">Contact</h3>
+				</div>
+				<div>
+					Hassan Ali</br><a href="mailto:hassanali.mail.mcgill.com">hassan.ali@mail.mcgill.com</a>
+				</div>
 			</div>
-			<div class="col-xs-4 text-center">
-				<a target="_blank" href="https://www.instagram.com/helfiwalcott/"><img class=""  src="assets/img/instagram.png"></a>
+			<div class="thumbs-up is-hidden-mobile">
+				<i class="fa fa-thumbs-o-up fa-6" aria-hidden="true"></i>
 			</div>
-			<div class="col-xs-4 text-left">
-				<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
-			</div>
-		</div>
-	</section>	
-	
-	<!-- contact -->
-	<section id="contact" class="container text-center">
-		<div>
-			<h3>Contact</h3>
-		</div>
-		<div>
-			Please do not hesitate to email me at this email account<br>
-			<a href="mailto:hassanali.mail.mcgill.com">hassan.ali@mail.mcgill.com</a>
-		</div>
-	</section>
-
-
-	<!-- scripts reference -->
-	<script src="controller.js"></script>		
-</body>	
-
-
+		</section>
+		
+		<!-- Scripts  -->
+		<script src="controller.js"></script>		
+	</body>	
 </html>
