Make CSS changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 				<a class="nav-item" href="#about">About</a>
 				<a class="nav-item" href="#projects">Projects</a>
 				<a class="nav-item" href="#social">Social</a>
-				<a class="nav-item" href="#contact">Contact</a>
 			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
@@ -55,7 +54,7 @@
 		</nav>
 				
 		<!-- About Me -->
-		<section id="about" class="section-1">
+		<section id="about" class="section section-1">
 			<div class="container has-text-centered">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
 				<img class="avatar" src="http://hassanali.me/images/my-picture.png">
@@ -68,7 +67,7 @@
 		</section>
 		
 		<!-- Projects -->
-		<section  id="projects" class="section-2">
+		<section  id="projects" class="section section-2">
 			<div class="container">
 				<div class="has-text-centered">
 					<h3 class="title is-3">Projects</h3>
@@ -113,7 +112,7 @@
 		</section>
 
 		<!-- Social -->
-		<section id="social" class="section-3">
+		<section id="social" class="section section-3">
 			<div class="container">
 				<div class="has-text-centered">					
 					<h3 class="title is-3">Let's Socialize</h3>
@@ -132,15 +131,9 @@
 			</div>
 		</section>	
 		
-		<!-- Contact -->
-		<section id="contact" class="section-4">
-			<div class="container">
-				<div class="content has-text-centered">
-					<p>
-						Made with <strong><i class="fa fa-heart-o love" aria-hidden="true"></i></strong> by <a href="https://helfi92.github.io/about.html">Hassan Ali</a>
-					</p>
-				</div>
-			</div>
+		<!-- Footer -->
+		<section class="section-4 has-text-centered container">
+			<a href="https://helfi92.github.io/about.html">Hassan Ali</a>
 		</section>
 		
 		<!-- Scripts  -->
