Add LICENSE, replace images, add README

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<section id="about" class="section section-1">
 			<div class="container has-text-centered">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="http://hassanali.me/images/my-picture.png">
+				<img class="avatar" src="assets/img/profile.png">
 			</div>
 			<div class="container"></br>
 				<p class="intro">
@@ -79,7 +79,7 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/watch.jpg" alt="Image">
+										<img src="assets/img/project-1.jpg" alt="Image">
 									</figure>
 								</div>
 								<div>			
@@ -96,7 +96,7 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/phone.jpeg" alt="Image">
+										<img src="assets/img/project-2.jpg" alt="Image">
 									</figure>
 								</div>
 								<div>			
