Update link to new domain and add comment

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 				<div class="has-text-centered">
 					<h3 class="title is-3">Projects</h3>
 				</div>
-				<!-- Project 1 -->
+				
 				<div class="columns is-multiline is-desktop">
+					<!-- Project 1 -->
 					<div class="column">
 						<div class="box project-text">
 							<article>
@@ -133,7 +134,7 @@
 		
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<a href="https://helfi92.github.io/about.html">Hassan Ali</a>
+			<a href="http://www.hassanali.me/about">Hassan Ali</a>
 		</section>
 		
 		<!-- Scripts  -->
