Remove unwanted comment

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
-	<!-- external libraries-->
-	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
-	
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
 	<meta name="author" content="Hassan Ali">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,9 +16,8 @@
 		<nav class="nav container void-background">
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
-		
 			<div class="nav-left">
-				<a href="http://medium.com/@hassanwalcott/" class="nav-item">
+				<a href="http://medium.com/@hassanhelfi/" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-medium"></i>
 					</span>
@@ -31,7 +27,7 @@
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-				<a href="https://twitter.com/helfiwalcott" class="nav-item">
+				<a href="https://twitter.com/hassanhelfi" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-twitter"></i>
 					</span>
@@ -61,7 +57,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					tique. Ut eleifend eros nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper. Vestibulum viverra velit. Curabitur erat os nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a
+					Lorem ipsum eros nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper. Vestibulum viverra velit. Curabitur erat os nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a
 				</p>
 			</div>
 		</section>
