--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Lorem ipsum eros nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a, urna commodo velit condimentum, porta egestas semper. Vestibulum viverra velit. Curabitur erat os nulla id vestibulum suspendisse, ornare id massa laudantium, a urna a
+					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
 				</p>
 			</div>
 		</section>
@@ -81,7 +81,7 @@
 								</div>
 								<div>			
 									<p>
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
+										They don’t want us to eat. I told you all this before, when you have a swimming pool, do not use chlorine, use salt water, the healing, salt water is the healing.
 									</p>
 								</div>
 							</article>
@@ -98,7 +98,7 @@
 								</div>
 								<div>			
 									<p>
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
+										Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is what you make it, so let’s make it.
 									</p>
 								</div>
 							</article>
