--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 						<i class="fa fa-medium"></i>
 					</span>
 				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
+				<a href="http://github.com/tiffanybalc" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
+				<a href="https://twitter.com/tifff16" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-twitter"></i>
 					</span>
@@ -116,13 +116,13 @@
 				</div>
 				<div class="social-container columns">
 					<div class="column is-4 has-text-centered">
-						<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class="" src="assets/img/linkedin.png"></a>
+						<a target="_blank" href="https://www.linkedin.com/in/tiffanybalcarcel/"><img class="" src="assets/img/linkedin.png"></a>
 					</div>
 					<div class="column is-4 has-text-centered">
-						<a target="_blank" href="https://www.instagram.com/helfiwalcott/"><img class=""  src="assets/img/instagram.png"></a>
+						<a target="_blank" href="https://www.instagram.com/tiffanyyalexis/"><img class=""  src="assets/img/instagram.png"></a>
 					</div>
 					<div class="column is-4 has-text-centered">
-						<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
+						<a target="_blank" href="https://www.facebook.com/Tiffany.AlexandraB?"><img class="" src="assets/img/facebook.png"></a>
 					</div>
 				</div>
 			</div>
