--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="#about">About</a>
-				<a class="nav-item" href="#projects">Projects</a>
+				<a class="nav-item" href="#projects">Products</a>
 				<a class="nav-item" href="#social">Social</a>
 			</div>
 
@@ -57,7 +57,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
+					Good Look Good Vibes Good Life
 				</p>
 			</div>
 		</section>
@@ -66,7 +66,7 @@
 		<section  id="projects" class="section section-2">
 			<div class="container">
 				<div class="has-text-centered">
-					<h3 class="title is-3">Projects</h3>
+					<h3 class="title is-3">Products</h3>
 				</div>
 				
 				<div class="columns is-multiline is-desktop">
@@ -81,7 +81,8 @@
 								</div>
 								<div>			
 									<p>
-										They don’t want us to eat. I told you all this before, when you have a swimming pool, do not use chlorine, use salt water, the healing, salt water is the healing.
+										TO BE THE FOREFRONT IN THE HEALTH & BEAUTY PRODUCTS AND FOOD INDUSTRY. PROVIDES AFFORDABLE AND HIGH QUALITY NUTRITIONAL FOOD AND SUPPLEMENTS THAT EVERY FILIPINO SHOULD HAVE. A RESPONSIBLE COMPANY THAT PROMOTES AND IMPROVES THE QUALITY OF LIFESTYLE AND SUPPORT A HAPPY, SUSTAINABLE AND PROSPEROUS TO EACH AND EVERY FILIPINO FAMILY.
+
 									</p>
 								</div>
 							</article>
@@ -98,7 +99,8 @@
 								</div>
 								<div>			
 									<p>
-										Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is what you make it, so let’s make it.
+										TO INSPIRE, REVITALIZE AND IMPROVE EACH AND EVERY FILIPINO’S LIFE BY INSTILLING ENTREPRUENAL SKILLS, HEALTHY LIFESTYLE AND SHARING TO OTHERS. CREATE VALUES AND MAKE A DIFFERENCE. MAXIMIZE LONG-TERM RETURNS TO SHAREHOLDERS AND STAKEHOLDERS WHILE SUPPORTING SUSTAINABLE AND PROFIT ORIENTED COMMUNITIES.
+
 									</p>
 								</div>
 							</article>
