--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<!-- Source: https://flic.kr/p/pAZBNK -->
 				<img class="avatar" src="assets/img/profile.png">
 			</div>
-			<div class="container"></br>
+			<div class="container has-text-centered"></br>
 				<p class="intro">
 					Good Look Good Vibes Good Life
 				</p>
