--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-	<meta name="author" content="Hassan Ali">
+	<meta name="author" content="Alberto Alonso">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
@@ -17,27 +18,21 @@
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
 			<div class="nav-left">
-				<a href="http://medium.com/@hassanhelfi/" class="nav-item">
+				<a href="https://www.linkedin.com/in/albertoalonsog/" class="nav-item">
 					<span class="icon">
-						<i class="fa fa-medium"></i>
+						<i class="fa fa-linkedin"></i>
 					</span>
 				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
+				<a href="http://github.com/a-alonso" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-twitter"></i>
-					</span>
-				</a>				
 			</div>
 
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="#about">About</a>
-				<a class="nav-item" href="#projects">Projects</a>
-				<a class="nav-item" href="#social">Social</a>
+				<a class="nav-item" href="#Work">Work</a>
 			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
@@ -48,89 +43,79 @@
 				<span></span>
 			</span>
 		</nav>
-				
+
 		<!-- About Me -->
 		<section id="about" class="section section-1">
-			<div class="container has-text-centered">
-				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="assets/img/profile.png">
+			<div class="container">
+					<article class="media">
+					  <figure class="media-left">
+					    <p class="image is-70x70">
+					      <img class="avatar" src="https://media.licdn.com/mpr/mpr/shrinknp_100_100/AAIA_wDGAAAAAQAAAAAAAAmeAAAAJDk3N2ExZjcyLWQwMzgtNGU3MC04MWIwLWJjNDU5NmFlMzAzYg.jpg">
+					    </p>
+					  </figure>
+					  <div class="media-content">
+				      <h1 class="title is-1">Alberto Alonso</h1>
+							<p class="subtitle is-3">Portfolio 2017</p>
+					  </div>
+				</article>
 			</div>
 			<div class="container"></br>
-				<p class="intro">
-					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
+				<p class="">
+					Data-Oriented UX Designer & Product Manager
+					<br>
+					My career is focused on planning, testing, deploying, measuring and iterating digital services
+					<br>
+					- Experience in the public-private sector for massive ICT appropriation [MinTIC + Colciencias & Samsung + Intel]
+					<br>
+					- Experience in the private sector for start-up growth [Y Combinator + Endeavor]
 				</p>
 			</div>
 		</section>
-		
-		<!-- Projects -->
-		<section  id="projects" class="section section-2">
+
+		<!-- Work -->
+		<section  id="Work" class="section section-2">
 			<div class="container">
 				<div class="has-text-centered">
-					<h3 class="title is-3">Projects</h3>
+					<h2 class="title is-2">Work</h2>
 				</div>
-				
-				<div class="columns is-multiline is-desktop">
-					<!-- Project 1 -->
-					<div class="column">
-						<div class="box project-text">
-							<article>
-								<div>
-									<figure class="image project-figure">
-										<img src="assets/img/project-1.jpg" alt="Image">
-									</figure>
-								</div>
-								<div>			
-									<p>
-										They don’t want us to eat. I told you all this before, when you have a swimming pool, do not use chlorine, use salt water, the healing, salt water is the healing.
-									</p>
-								</div>
-							</article>
+
+				<div class="columns is-desktop">
+					<!-- Work 1 -->
+					<div class="column is-6">
+						<div class="card">
+							<div class="card-image">
+								<figure class="image is-350x150">
+						      <img src="assets/img/work_1.png" alt="Placeholder image">
+						    </figure>
+							</div>
+							<div class="card-content">
+								<p class="title is-3">Hogaru.com</p>
+								<p class="subtitle is-6">On Demand cleaning for SMEs and Homes</p>
+							</div>
 						</div>
 					</div>
 					<!-- Project 2 -->
-					<div class="column">
-						<div class="box project-text">
-							<article>
-								<div>
-									<figure class="image project-figure">
-										<img src="assets/img/project-2.jpg" alt="Image">
-									</figure>
-								</div>
-								<div>			
-									<p>
-										Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is what you make it, so let’s make it.
-									</p>
-								</div>
-							</article>
+					<div class="column is-6">
+						<div class="card">
+							<div class="card-image">
+								<figure class="image is-350x150">
+									<img src="http://via.placeholder.com/350x150" alt="Placeholder image">
+								</figure>
+							</div>
+							<div class="card-content">
+								<h3 class="subtitle is-3">Bicimapa.com</h3>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 		</section>
 
-		<!-- Social -->
-		<section id="social" class="section section-3">
-			<div class="container">
-				<div class="has-text-centered">					
-					<h3 class="title is-3">Let's Socialize</h3>
-				</div>
-				<div class="social-container columns">
-					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class="" src="assets/img/linkedin.png"></a>
-					</div>
-					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
-					</div>
-				</div>
-			</div>
-		</section>	
-		
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<a href="http://www.hassanali.me/about">Hassan Ali</a>
+			<small>Alberto Alonso Portfolio 2017 👨🏻‍💻 | alonsog.alberto@gmail.com</small>
 		</section>
-		
+
 		<!-- Scripts  -->
-		<script src="controller.js"></script>		
-	</body>	
+		<script src="controller.js"></script>
+	</body>
 </html>
