--- a/index.html
+++ b/index.html
@@ -82,29 +82,44 @@
 				<div class="columns is-desktop">
 					<!-- Work 1 -->
 					<div class="column is-6">
-						<div class="card">
-							<div class="card-image">
-								<figure class="image is-350x150">
-						      <img src="assets/img/work_1.png" alt="Placeholder image">
-						    </figure>
+						<a href="http://invis.io/VHDZFQGRZ" target="_blank">
+							<div class="card">
+								<div class="card-image">
+									<figure class="image is-350x150">
+							      <img src="assets/img/work_1.png" alt="Hogaru">
+							    </figure>
+								</div>
+								<div class="card-content">
+									<p class="title is-3">Hogaru.com</p>
+									<p class="subtitle is-6">On Demand cleaning for SMEs and Homes</p>
+									<a href="http://invis.io/VHDZFQGRZ" target="_blank"><p> <br>Read more
+										<span class="icon">
+											<i class="fa fa-long-arrow-right"></i>
+										</span>
+									</p></a>
+								</div>
 							</div>
-							<div class="card-content">
-								<p class="title is-3">Hogaru.com</p>
-								<p class="subtitle is-6">On Demand cleaning for SMEs and Homes</p>
-							</div>
-						</div>
+						</a>
 					</div>
 					<!-- Project 2 -->
 					<div class="column is-6">
-						<div class="card">
-							<div class="card-image">
-								<figure class="image is-350x150">
-									<img src="http://via.placeholder.com/350x150" alt="Placeholder image">
-								</figure>
-							</div>
-							<div class="card-content">
-								<h3 class="subtitle is-3">Bicimapa.com</h3>
-							</div>
+						<a href="http://www.bicimapa.com/" target="_blank">
+							<div class="card">
+								<div class="card-image">
+									<figure class="image is-350x150">
+										<img src="assets/img/work_2.png" alt="Bicimapa">
+									</figure>
+								</div>
+								<div class="card-content">
+									<p class="title is-3">Bicimapa.com</p>
+									<p class="subtitle is-6">Urban cycling crowdsourced mapped information</p>
+									<a href="http://www.bicimapa.com/" target="_blank"><p> <br>Read more
+										<span class="icon">
+											<i class="fa fa-long-arrow-right"></i>
+										</span>
+									</p></a>
+								</div>
+							</a>
 						</div>
 					</div>
 				</div>
