--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+ <!-- If you are reviewing my code, I made it myself, is not a template ;) -->
 <head>
 	<title>Portfolio</title>
 	<!-- css files -->
@@ -38,7 +39,6 @@
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
 			<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
 			<span class="nav-toggle">
-				<span></span>
 				<span></span>
 				<span></span>
 			</span>
@@ -82,7 +82,7 @@
 				<div class="columns is-desktop">
 					<!-- Work 1 -->
 					<div class="column is-6">
-						<a href="http://invis.io/VHDZFQGRZ" target="_blank">
+						<a href="work_hogaru.html" target="_blank">
 							<div class="card">
 								<div class="card-image">
 									<figure class="image is-350x150">
@@ -92,7 +92,7 @@
 								<div class="card-content">
 									<p class="title is-3">Hogaru.com</p>
 									<p class="subtitle is-6">On Demand cleaning for SMEs and Homes</p>
-									<a href="http://invis.io/VHDZFQGRZ" target="_blank"><p> <br>Read more
+									<a href="work_hogaru.html" target="_blank"><p> <br>Read more
 										<span class="icon">
 											<i class="fa fa-long-arrow-right"></i>
 										</span>
@@ -123,6 +123,7 @@
 						</div>
 					</div>
 				</div>
+			</div>
 		</section>
 
 		<!-- Footer -->
