--- a/work_hogaru.html
+++ b/work_hogaru.html
@@ -100,12 +100,9 @@
 								</div>
 								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Wireframes, UI specs, and User stories were handed to developers
 									<br>
-								Check the wireframe
-								<a href="http://invis.io/VHDZFQGRZ">here:</a> 
+								Check the wireframe in invision
+								<a href="http://invis.io/VHDZFQGRZ"> HERE</a>
 								</p>
-								<iframe src="http://invis.io/VHDZFQGRZ" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
-
 								<!-- Second large project -->
 								<hr>
 								<h2 class="title is-2">Mobile ERP - Cleaners Operation Management</h2>
@@ -154,7 +151,7 @@
 									<br>
 								Check the decision tree here:
 								</p>
-								<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQgavZ9SUdTe3cyK_dgPGrJf_fTBVVVnO6I2HxodJoNtx_Nje8QaoeMLArRNg3VM1f56Kt-vjhwjoa8/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+								<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQgavZ9SUdTe3cyK_dgPGrJf_fTBVVVnO6I2HxodJoNtx_Nje8QaoeMLArRNg3VM1f56Kt-vjhwjoa8/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 							</div>
 						</div>
 					</div>
