--- a/work_hogaru.html
+++ b/work_hogaru.html
@@ -120,9 +120,11 @@
 								<p class=''><span class='subtitle is-5'>The solution -</span>A mobile bot was embedded in their mobile app to simulate a chat with a virtual operator that replies immediatly to any requirement the cleaner has. Manual communication is held only when a situation requires attention
 									<br>
 									The virtual operator "Amanda" currently <strong> replies automatically to the 76% of conversations</strong> with cleaners and manages the daily operations with no hassle.
-									A sandbox tool was deployed for the ops team to add or remove options the cleaners can choose when using the bot.
+									A sandbox tool was deployed for the ops team to add or remove options the cleaners can choose when using the bot. Watch the news report about this ERP:
+									<br>
 								</p>
-								<p class=''><span class='subtitle is-5'>The UX Approach -</span>The solution was conceived and refined by UX Research and prototyping using these qualitative and quantitative methods:
+								<iframe width="100%" height="315" src="https://www.youtube.com/embed/YeGhbdDIc9k?rel=0" frameborder="0" allowfullscreen></iframe>
+								<p class=''><br><span class='subtitle is-5'>The UX Approach -</span>The solution was conceived and refined by UX Research and prototyping using these qualitative and quantitative methods:
 									<br>
 								</p>
 								<div class="columns is-desktop">
